tests/snapshots/codegen_snapshot_tests__user_defined_mutable_method_decorators.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&__INCAN_DECORATED_COUNTER_BUMP);
        });
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Counter {
    value: i64,
}
impl incan_stdlib::reflection::HasClassName for Counter {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Counter {
    fn __class_name__() -> &'static str {
        "Counter"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Counter {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Counter {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Counter {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
static __INCAN_DECORATED_COUNTER_BUMP: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<fn(&mut Counter, i64) -> i64>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new(
    keep(Counter::__incan_original_bump_adapter),
));
impl Counter {
    fn __incan_original_bump(&mut self, by: i64) -> i64 {
        __incan_init_module_statics();
        self.value = self.value + by;
        return self.value;
    }
    fn __incan_original_bump_adapter(__incan_self: &mut Counter, by: i64) -> i64 {
        __incan_init_module_statics();
        return __incan_self.__incan_original_bump(by);
    }
    pub fn bump(&mut self, __incan_arg_0: i64) -> i64 {
        __incan_init_module_statics();
        return {
            __incan_init_module_statics();
            __INCAN_DECORATED_COUNTER_BUMP.get()
        }(self, __incan_arg_0);
    }
}
fn keep(func: fn(&mut Counter, i64) -> i64) -> fn(&mut Counter, i64) -> i64 {
    __incan_init_module_statics();
    return func;
}
fn run(counter: &mut Counter) -> i64 {
    __incan_init_module_statics();
    return counter.bump(2);
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut counter = Counter { value: 1 };
    let _result = run(&mut counter);
}
