tests/snapshots/codegen_snapshot_tests__user_defined_operators.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Money {
    cents: i64,
}
impl incan_std_core::reflection::HasClassName for Money {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Money {
    fn __class_name__() -> &'static str {
        "Money"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Money {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Money {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("cents"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("cents"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Money {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "cents" => Some(format!("{}", self.cents)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("cents".to_string(), format!("{}", self.cents))]
    }
}
impl Money {
    pub fn __add__(&self, other: Money) -> Money {
        return Money {
            cents: self.cents + other.cents,
        };
    }
    pub fn __lt__(&self, other: Money) -> bool {
        return self.cents < other.cents;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct User {
    id: i64,
}
impl incan_std_core::reflection::HasClassName for User {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for User {
    fn __class_name__() -> &'static str {
        "User"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for User {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for User {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("id"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("id"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for User {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "id" => Some(format!("{}", self.id)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("id".to_string(), format!("{}", self.id))]
    }
}
impl User {
    #[inline(never)]
    pub fn __eq__(&self, other: User) -> bool {
        <Self as std::cmp::PartialEq>::eq(self, &other)
    }
}
impl PartialEq for User {
    fn eq(&self, other: &Self) -> bool {
        return self.id == other.id;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Row {
    value: i64,
}
impl incan_std_core::reflection::HasClassName for Row {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Row {
    fn __class_name__() -> &'static str {
        "Row"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Row {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Row {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Row {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl Row {
    pub fn __getitem__(&self, index: i64) -> i64 {
        return self.value + index;
    }
    pub fn __setitem__(&self, _: i64, _: i64) {
        let _ = ();
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct OpBox {
    value: i64,
}
impl incan_std_core::reflection::HasClassName for OpBox {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for OpBox {
    fn __class_name__() -> &'static str {
        "OpBox"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for OpBox {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for OpBox {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for OpBox {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl OpBox {
    pub fn __matmul__(&self, other: OpBox) -> OpBox {
        return OpBox {
            value: self.value + other.value,
        };
    }
    pub fn __and__(&self, other: OpBox) -> OpBox {
        return OpBox {
            value: self.value + other.value,
        };
    }
    pub fn __invert__(&self) -> OpBox {
        return OpBox { value: 0 - self.value };
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let a = Money { cents: 100 };
    let b = Money { cents: 25 };
    let _total = a.__add__(b.clone());
    let _cheaper = b.__lt__(a);
    let first = User { id: 1 };
    let second = User { id: 1 };
    let _same = first == second;
    let row = Row { value: 4 };
    let _item = row.__getitem__(3);
    let _ = row.__setitem__(3, 9);
    let left = OpBox { value: 2 };
    let right = OpBox { value: 3 };
    let _mat = left.__matmul__(right.clone());
    let _both = left.__and__(right);
    let _inverted = left.__invert__();
}
