tests/snapshots/codegen_snapshot_tests__value_enums.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
pub enum HttpStatus {
    Ok,
    NotFound,
}
impl incan_std_core::reflection::HasTypeClassName for HttpStatus {
    fn __class_name__() -> &'static str {
        "HttpStatus"
    }
}
impl HttpStatus {
    pub fn message(&self) -> String {
        match self {
            Self::Ok => "Ok".to_string(),
            Self::NotFound => "NotFound".to_string(),
        }
    }
}
impl HttpStatus {
    pub fn value(&self) -> i64 {
        match self {
            Self::Ok => 200,
            Self::NotFound => 404,
        }
    }
    pub fn from_value(value: i64) -> Option<Self> {
        match value {
            200 => Some(Self::Ok),
            404 => Some(Self::NotFound),
            _ => None,
        }
    }
}
impl std::fmt::Display for HttpStatus {
    fn fmt(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::Ok => formatter.write_str(&200.to_string()),
            Self::NotFound => formatter.write_str(&404.to_string()),
        }
    }
}
impl std::str::FromStr for HttpStatus {
    type Err = String;
    fn from_str(value: &str) -> Result<Self, Self::Err> {
        let parsed = value.parse::<i64>().map_err(|err| err.to_string())?;
        Self::from_value(parsed)
            .ok_or_else(|| {
                format!("invalid value for {}: {}", stringify!(HttpStatus), value)
            })
    }
}
