tests/snapshots/codegen_snapshot_tests__variadic_calls.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn collect(
    _: String,
    items: Vec<i64>,
    _: std::collections::HashMap<String, String>,
) -> i64 {
    let mut total: i64 = 0;
    for item in items.iter().copied() {
        total = total + item;
    }
    return total;
}
fn collect_via_callable(
    xs: Vec<i64>,
    kw: std::collections::HashMap<String, String>,
) -> i64 {
    let f = collect;
    return f(
        "x".to_string(),
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.push(1);
            __incan_rest_args.extend(xs);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.insert("name".to_string(), "inline".to_string());
            __incan_rest_kwargs.extend(kw);
            __incan_rest_kwargs
        },
    );
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Collector {}
impl incan_stdlib::reflection::HasClassName for Collector {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Collector {
    fn __class_name__() -> &'static str {
        "Collector"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Collector {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Collector {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Collector {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Collector {
    pub fn collect(
        &self,
        items: Vec<i64>,
        _: std::collections::HashMap<String, String>,
    ) -> i64 {
        let mut total: i64 = 0;
        for item in items.iter().copied() {
            total = total + item;
        }
        return total;
    }
}
fn collect_via_method(
    xs: Vec<i64>,
    kw: std::collections::HashMap<String, String>,
) -> i64 {
    let collector = Collector {};
    return collector
        .collect(
            {
                let mut __incan_rest_args = Vec::new();
                __incan_rest_args.push(1);
                __incan_rest_args.extend(xs);
                __incan_rest_args
            },
            {
                let mut __incan_rest_kwargs = std::collections::HashMap::new();
                __incan_rest_kwargs.insert("name".to_string(), "inline".to_string());
                __incan_rest_kwargs.extend(kw);
                __incan_rest_kwargs
            },
        );
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let xs_direct = vec![2, 3];
    let kw_direct = [("name".to_string(), "demo".to_string())]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let xs_callable = vec![4, 5];
    let kw_callable = [("name".to_string(), "callable".to_string())]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let xs_method = vec![6, 7];
    let kw_method = [("name".to_string(), "method".to_string())]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    return collect(
        "x".to_string(),
        {
            let mut __incan_rest_args = Vec::new();
            __incan_rest_args.push(1);
            __incan_rest_args.extend(xs_direct);
            __incan_rest_args
        },
        {
            let mut __incan_rest_kwargs = std::collections::HashMap::new();
            __incan_rest_kwargs.insert("name".to_string(), "inline".to_string());
            __incan_rest_kwargs.extend(kw_direct);
            __incan_rest_kwargs
        },
    ) + collect_via_callable(xs_callable, kw_callable)
        + collect_via_method(xs_method, kw_method);
}
