tests/snapshots/codegen_snapshot_tests__web_route_extractors.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("0.2.0-dev.2");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
use incan_stdlib::__private::tokio::time::{sleep, timeout, Duration};
use incan_stdlib::__private::tokio::sync::{mpsc, Mutex, RwLock};
use incan_stdlib::__private::tokio::task::JoinHandle;
use incan_stdlib::r#async;
pub use crate::__incan_std::web::route;
pub use crate::__incan_std::web::GET;
pub use crate::__incan_std::web::POST;
#[incan_web_macros::route("/posts/{year}/{month}", methods = ["GET"])]
async fn get_posts(year: i64, month: i64) -> i64 {
    return year + month;
}
#[incan_web_macros::route("/users/{id}", methods = ["POST"])]
async fn create_user(id: i64) -> i64 {
    return id;
}
